--- a/website/themes/base-theme/layouts/_default/baseof.html
+++ b/website/themes/base-theme/layouts/_default/baseof.html
@@ -3,11 +3,11 @@
   {{ partial "head.html" . }}
 
   <body class="flex min-h-dvh flex-col sm:min-h-screen">
-    {{- partial "dev/dev-tools.html" . -}} {{- partial "header/site-header.html"
-    . -}}
+    {{- partial "dev/dev-tools.html" . -}} {{- partial "header/header.html" .
+    -}}
     <main class="mx-auto w-screen max-w-4xl flex-1 grow px-6 py-16">
       {{- block "main" . }}{{- end }}
     </main>
-    {{- partial "footer/site-footer.html" . -}}
+    {{- partial "footer/footer.html" . -}}
   </body>
 </html>
