feat: add header layout

--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -1,3 +1,37 @@
-<header class="mx-auto w-screen max-w-4xl px-6 py-6">
-  <p class="text-center">Welcome!</p>
+<header class="fixed top-0 w-full bg-white shadow-lg">
+  <nav
+    class="mx-auto flex w-full max-w-screen-xl items-center justify-between py-4"
+  >
+    <!-- LOGO START -->
+    <a class="flex items-center justify-center gap-x-2" href="/">
+      <img
+        class="h-16 w-auto"
+        src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Coat_of_arms_of_Yogyakarta.svg"
+        alt="Logo Pemda DIY"
+      />
+      <div class="flex flex-col">
+        <span class="text-sm font-bold uppercase">Bidang Akuntansi</span>
+        <span class="text-xs uppercase">Badan Pengelola Keuangan dan Aset</span>
+        <span class="text-xs uppercase">Daerah Istimewa Yogyakarta</span>
+      </div>
+    </a>
+    <!-- LOGO END -->
+
+    <!-- HEADER MENU START -->
+    <ul class="flex gap-x-8 font-semibold">
+      <li>
+        <a class="hover:text-zinc-800" href="/">Beranda</a>
+      </li>
+      <li>
+        <a class="hover:text-zinc-800" href="/informasi">Informasi</a>
+      </li>
+      <li>
+        <a class="hover:text-zinc-800" href="/berita">Berita</a>
+      </li>
+      <li>
+        <a class="hover:text-zinc-800" href="/profil">Profil</a>
+      </li>
+    </ul>
+    <!-- HEADER MENU END -->
+  </nav>
 </header>
