refactor: update baseof and index layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,7 @@
 
   <!--  SIDE SECTION START -->
   <section class="w-[500px] px-4">
-    <div
-      class="sticky top-8 flex w-full flex-col items-center justify-center gap-y-8"
-    >
+    <div class="flex w-full flex-col items-center justify-center gap-y-8">
       <img
         class="h-40 w-auto"
         src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Coat_of_arms_of_Yogyakarta.svg"
