--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,11 +3,11 @@
   {{ partial "head.html" . }}
 
   <body class="flex min-h-dvh flex-col sm:min-h-screen">
-    {{- partial "dev/dev-tools.html" . -}} {{/* {{- partial "header/header.html"
-    . -}} */}}
+    {{- partial "dev/dev-tools.html" . -}} {{- partial "header/header.html" .
+    -}}
     <main class="mx-auto w-full flex-1 grow">
       {{- block "main" . }}{{- end }}
     </main>
-    {{/* {{- partial "footer/footer.html" . -}} */}}
+    {{- partial "footer/footer.html" . -}}
   </body>
 </html>
