feat: add single page layout

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,1 +1,7 @@
-{{ define "main" }} {{ end }}
+{{ define "main" }}
+<div class="w-full max-w-full">
+  <div class="mx-auto my-32 max-w-screen-xl px-8">
+    <article class="prose">{{ .Content }}</article>
+  </div>
+</div>
+{{ end }}
