refactor: update header layout

--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -1,18 +1,19 @@
 <header class="fixed top-0 w-full bg-white shadow-lg">
   <nav
-    class="mx-auto flex w-full max-w-screen-xl items-center justify-between py-4"
+    class="mx-auto flex w-full max-w-screen-xl items-center justify-between py-2"
   >
     <!-- LOGO START -->
     <a class="flex items-center justify-center gap-x-2" href="/">
       <img
-        class="h-16 w-auto"
+        class="h-14 w-auto"
         src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Coat_of_arms_of_Yogyakarta.svg"
         alt="Logo Pemda DIY"
       />
       <div class="flex flex-col">
-        <span class="text-sm font-bold uppercase">Bidang Akuntansi</span>
-        <span class="text-xs uppercase">Badan Pengelola Keuangan dan Aset</span>
-        <span class="text-xs uppercase">Daerah Istimewa Yogyakarta</span>
+        <span class="text-sm font-semibold tracking-tight"
+          >Bidang Akuntansi</span
+        >
+        <span class="text-sm font-bold uppercase tracking-wide">BPKA DIY</span>
       </div>
     </a>
     <!-- LOGO END -->
